--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,7 @@
             "name": "buku",
             "request": "launch",
             "deviceId": "chrome",
+            "args": ["--web-renderer", "html"],
             "type": "dart"
         },
         {
